Added more tests

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,26 @@ license = Perl_5
 copyright_holder = Leon Timmermans
 copyright_year   = 2011
 
-[@Basic]
+; Tweaking to get t/files/.modulebuildrc in
+
+[GatherDir]
+include_dotfiles = 1
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
+[PruneFiles]
+match = \..*\.swp
 
 ;Meta information
 [AutoPrereqs]
