--- a/dist.ini
+++ b/dist.ini
@@ -5,46 +5,6 @@ copyright_holder = Leon Timmermans
 copyright_year   = 2010
 
 ; Tweaking to get t/files/.modulebuildrc in
-
-[GatherDir]
-include_dotfiles = 1
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExtraTests]
-[ExecDir]
-[ShareDir]
-[MakeMaker]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-
-[PruneFiles]
-match = \..*\.swp
-
-;Meta information
-[AutoPrereqs]
-[MetaJSON]
-[MetaResources]
-[Repository]
-[Bugtracker]
-[MinimumPerl]
-[Git::NextVersion]
-
-;Munging
-[PodWeaver]
-[PkgVersion]
-
-;Testing
-[PodSyntaxTests]
-[PodCoverageTests]
-[KwaliteeTests]
-
-;Releasing
-[NextRelease]
-[Signature]
-[CheckChangesHasContent]
-[@Git]
+[@LEONT]
+install_tool = eumm
+GatherDir.include_dotfiles = 1
